syntax = "proto3";
package trst.x.compute.v1beta1;

import "gogoproto/gogo.proto";
import "compute/types.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "cosmos/base/abci/v1beta1/abci.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/trstlabs/trst/x/compute/internal/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = true;

// Query provides defines the gRPC querier service
service Query {
    rpc ContractInfo (QueryContractInfoRequest) returns (QueryContractInfoResponse) {
        option (google.api.http).get = "/compute/v1beta1/contract/{address}";
    }
     rpc ContractResult (QueryContractResultRequest) returns (QueryContractResultResponse) {
        option (google.api.http).get = "/compute/v1beta1/contract/{address}/result";
    }

    rpc ContractsByCode (QueryContractsByCodeRequest) returns (QueryContractsByCodeResponse) {
        option (google.api.http).get = "/compute/v1beta1/code/{code_id}/contracts";
    }
  
    rpc SmartContractState (QuerySmartContractStateRequest) returns (QuerySmartContractStateResponse) {
        option (google.api.http).get = "/compute/v1beta1/contract/{address}/smart/{query_data}";
    }
    rpc Code (QueryCodeRequest) returns (QueryCodeResponse) {
        option (google.api.http).get = "/compute/v1beta1/code/{code_id}";
    }
    rpc Codes (google.protobuf.Empty) returns (QueryCodesResponse) {
        option (google.api.http).get = "/compute/v1beta1/code";
    }
}

// QueryContractInfoRequest is the request type for the Query/ContractInfo RPC method
message QueryContractInfoRequest {
    // address is the address of the contract to query
    string address = 1;
}
// QueryContractInfoResponse is the response type for the Query/ContractInfo RPC method
message QueryContractInfoResponse {

    ContractInfo ContractInfo = 2 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
}


// QueryContractResultRequest is the request type for the Query/ContractrResult RPC method
message QueryContractResultRequest {
    // address is the address of the contract to query
    string address = 1;
}
// QueryContractResultResponse is the response type for the Query/ContractrResult RPC method
message QueryContractResultResponse {
    bytes data = 1;
    string log = 2;
}

message QueryContractsByCodeRequest {
    uint64 code_id = 1; // grpc-gateway_out does not support Go style CodID
}

message QueryContractsByCodeResponse {
    repeated ContractInfoWithAddress contract_infos = 1 [(gogoproto.nullable) = false];
}


message QuerySmartContractStateRequest {
    // address is the address of the contract
    string address = 1;
    bytes query_data = 2;
}

message QueryContractAddressByContractIdRequest {
    string contract_id = 1;
}

message QueryContractKeyRequest {
    // address is the address of the contract
    bytes address = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

message QueryContractHashRequest {
    // address is the address of the contract
    bytes address = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

message QuerySmartContractStateResponse {
    bytes data = 1 [(gogoproto.casttype) = "encoding/json.RawMessage"];
}

message QueryCodeRequest {
    uint64 code_id = 1; // grpc-gateway_out does not support Go style CodID
}

message CodeInfoResponse {
    uint64 code_id = 1 [(gogoproto.customname) = "CodeID", (gogoproto.jsontag) = "id"]; // id for legacy support
    bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    bytes code_hash = 3 [(gogoproto.casttype) = "github.com/tendermint/tendermint/libs/bytes.HexBytes"];
    string source = 4;
    string builder = 5;
     google.protobuf.Duration contract_duration = 6 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag)     = "contract_duration,omitempty"
  ];
    string title = 7;
    string description = 8;
    uint64 instances = 9;
}

message QueryCodeResponse {
    CodeInfoResponse code_info = 1 [(gogoproto.embed) = true, (gogoproto.jsontag) = ""];
    bytes data = 2 [(gogoproto.jsontag) = "data"];
}

message QueryCodesResponse {
    repeated CodeInfoResponse code_infos = 1 [(gogoproto.nullable) = false];
}

message QueryContractAddressByContractIdResponse {
    // address is the address of the contract
    bytes address = 1 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

message QueryContractKeyResponse {
    // address is the address of the contract
    bytes key = 1 [(gogoproto.casttype) = "github.com/tendermint/tendermint/libs/bytes.HexBytes"];
}

message QueryContractHashResponse {
    bytes code_hash = 1 [(gogoproto.casttype) = "github.com/tendermint/tendermint/libs/bytes.HexBytes"];
}

// DecryptedAnswer is a struct that represents a decrypted tx-query
message DecryptedAnswer {
    option (gogoproto.equal) = false;

    string type = 1;
    string input = 2;
    string output_data = 3;
    string output_data_as_string = 4;
    repeated cosmos.base.abci.v1beta1.StringEvent output_logs = 5 [(gogoproto.nullable) = false];
    bytes output_error = 6 [(gogoproto.casttype) = "encoding/json.RawMessage"];
    string plaintext_error = 7;
}
